# ServiceRent

./: README.md  pyproject.toml  requirements.txt
order_products/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
order_products/migrations/: 0001_initial.py  0002_alter_orderproduct_order_alter_orderproduct_product.py
orders/: models.py  repositories.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_options.py
products/: models.py  repositories.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
src/: api_urls.py  settings.py  urls.py
